[tool.poetry]
name = ":"
version = "0.1.0"
description = "Package for displaying pictures of pie"
authors = ["Ela Bandari <elabandari@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
