[tool.poetry]
name = "pie_package"
version = "0.1.0"
description = "Package for displaying pictures of pie"
authors = ["Ela Bandari <elabandari@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
Sphinx = "^3.5.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
